[tool.black]
line-length = 119
target-version = ['py39']

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["transformers"]

# Above lines are ported from https://github.com/huggingface/transformers/blob/6db23af50c8fd87f8442be9da085d274709c2e3f/pyproject.toml and modified.

[tool.poetry]
name = "alpaca-lora-5ei74r0"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "alpaca_lora_5ei74r0"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
transformers = ">=4.28.0"
peft = {git = "https://github.com/huggingface/peft.git", rev = "a478ab9bce252722817b5a2f10a1c0089ce9980c"}
accelerate = "^0.18.0"
appdirs = "^1.4.4"
loralib = "^0.1.1"
bitsandbytes = "^0.38.1"
datasets = "^2.11.0"
fire = "^0.5.0"
sentencepiece = "^0.1.98"
gradio = "^3.27.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"
ruff = ">=0.0.241,<=0.0.259"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

